[fix] #5105 spacing between hash magnets

--- a/modules.less
+++ b/modules.less
@@ -4553,6 +4553,7 @@ input-password{
 	padding-top: 80px;
 	display: block;
 	pointer-events: none;
+	clear: none;
 	> *{
 		pointer-events: all;
 	}
